Fixed image path

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             HTML elements tell the browser how to display the content.
     </p>
 
-    <img src="HTML-Full-Form.jpg" alt="HTML picture" width="300" height="150">
+    <img src="img/HTML-Full-Form.jpg" alt="HTML picture" width="300" height="150">
 
     <script>src = "js/app.js"</script>
 </body>
