--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello, World!</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script>
+        console.log("js in head section")
+    </script>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1 style="color: blue;" > Hello, World!</h1>
     <ul>
         <li>Unordered list</li>
         <li>First element</li>
@@ -27,5 +30,8 @@
     <img src="img/HTML-Full-Form.jpg" alt="HTML picture" width="300" height="150">
 
     <script>src = "js/app.js"</script>
+    <script>
+        console.log("js from html file")
+    </script>
 </body>
 </html>
