--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
     </script>
 </head>
 <body>
-    <h1 style="color: blue;" > Hello, World!</h1>
+    <h1> Hello, World!</h1>
     <ul>
         <li>Unordered list</li>
         <li>First element</li>
         <li>Second element</li>
     </ul>
-    <ol>
-        <li>Ordered list</li>
-        <li>First element</li>
-        <li>Second element</li>
-    </ol>
+    
+    <div class = "gold-text">
+        <h2 style="color: blue;">Ordered list</h2>
+        <ol>
+            <li>First element</li>
+            <li>Second element</li>
+        </ol>
+    </div>
+
     <p>
         HTML is the standard markup language for creating Web pages.
             <p>HTML describes the structure of a Web page. HTML consists of a series of elements.</p> 
@@ -29,9 +33,38 @@
 
     <img src="img/HTML-Full-Form.jpg" alt="HTML picture" width="300" height="150">
 
+    <div id ="links" class = "gold-text"> 
+        <a href="about.html">About Page</a>
+        <br>
+        <a href="https://ventspilstehnikums.lv">Ventpils Tehnikums</a>
+    </div>
+
+    <div id = "table">
+        <table>
+            <thead>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                </tr>
+            </thead>
+
+            <body>
+               <tr>
+                <th>Anna</th>
+                <th>Pronina</th>
+               </tr>
+               <tr>
+                <th>Aivars</th>
+                <th>Trumars</th>
+               </tr>
+            </body>
+        </table>
+    </div>
+
     <script>src = "js/app.js"</script>
     <script>
         console.log("js from html file")
     </script>
+
 </body>
 </html>
